# Meta-MAPG-R

./: .gitignore  BasinExpansion.lean  LICENSE  README.md  glossary.tex  main.tex  proof_basin_clean.tex
neural_benchmarks/: README.md  README_NEURAL.md  meta_mapg_neural.tex  pyproject.toml  run_all.sh  setup.sh
neural_benchmarks/artifacts/: REPORT.md
neural_benchmarks/artifacts/pilot/mpe/simple_reference/: threshold.txt
neural_benchmarks/artifacts/pilot/mpe/simple_speaker_listener/: threshold.txt
neural_benchmarks/artifacts/pilot/mpe/simple_spread/: threshold.txt
neural_benchmarks/artifacts/runs/meltingpot/prisoners_dilemma_in_the_matrix__repeated/: sweep_summary.json
neural_benchmarks/artifacts/runs/mpe/simple_reference/: sweep_summary.json
neural_benchmarks/configs/: ._overcooked_ring.yaml  meltingpot_clean_up.yaml  meltingpot_pd_arena.yaml  mpe_simple_reference.yaml  mpe_simple_spread.yaml  mpe_speaker_listener.yaml  overcooked_cramped.yaml  overcooked_forced.yaml  overcooked_ring.yaml
neural_benchmarks/meta_mapg/: __init__.py  orchestrator.py  train.py  utils.py
neural_benchmarks/meta_mapg/algos/: __init__.py  arms.py  corrections.py  ippo.py
neural_benchmarks/meta_mapg/envs/: __init__.py  meltingpot.py  mpe.py  overcooked.py
neural_benchmarks/meta_mapg/plotting/: __init__.py  figures.py
neural_benchmarks/meta_mapg/policies/: __init__.py  actor_critic.py
neural_benchmarks/scripts/: lambda_sweep.py  make_figures.py  pilot.py  run_sweep.py
neural_benchmarks/tests/: test_corrections.py
(+2297 files in other folders)
