[project]
name = "meta-mapg-neural"
version = "0.1.0"
description = "Neural-policy basin-entry experiments for Meta-MAPG (MPE / Overcooked / Melting Pot)"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core ML
    "torch>=2.2,<2.6",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    # Environments
    "pettingzoo>=1.24",
    "mpe2>=1.0",                 # MPE was split out of PettingZoo in 1.25
    "supersuit>=3.9",
    "gymnasium>=0.29",
    "pygame>=2.5",
    # Data, plots, utils
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.0",
]

[project.optional-dependencies]
overcooked = [
    # Stanford HARL Overcooked-AI; pure-Python, no external libs
    "overcooked-ai>=1.1.0",
]
meltingpot = [
    # dm_meltingpot has heavy native deps (dmlab2d).  Install separately if needed:
    #   uv pip install dm-meltingpot
    # Fallback when meltingpot is unavailable: matrix-style PettingZoo classic envs.
    "pettingzoo[classic]>=1.24",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta_mapg"]

[tool.ruff]
line-length = 100
target-version = "py310"
